tests/snapshots/type_resolver__type_resolver@13_valid_basic_variables.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/13_valid_basic_variables.lang
---
Ok: ~
