tests/snapshots/type_resolver__type_resolver@14_valid_arithmetic.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/14_valid_arithmetic.lang
---
Ok: ~
