tests/snapshots/type_resolver__type_resolver@15_valid_boolean_ops.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/15_valid_boolean_ops.lang
---
Ok: ~
