tests/snapshots/type_resolver__type_resolver@16_valid_comparisons.lang-2.snap
---
source: tests/type_resolver.rs
expression: hir
input_file: tests/type_resolver/16_valid_comparisons.lang
---
funs:
  main:
    return_ty:
      kind: Void
    body:
      - kind: Let
        name: a
        ty:
          kind: Num
        expr:
          kind: Num
          value: 10
      - kind: Let
        name: b
        ty:
          kind: Num
        expr:
          kind: Num
          value: 20
      - kind: Let
        name: eq
        ty:
          kind: Bool
        expr:
          kind: Binary
          op: Eq
          lhs:
            kind: Var
            name: a
          rhs:
            kind: Var
            name: b
      - kind: Let
        name: neq
        ty:
          kind: Bool
        expr:
          kind: Binary
          op: NotEq
          lhs:
            kind: Var
            name: a
          rhs:
            kind: Var
            name: b
      - kind: Let
        name: lt
        ty:
          kind: Bool
        expr:
          kind: Binary
          op: Lesser
          lhs:
            kind: Var
            name: a
          rhs:
            kind: Var
            name: b
      - kind: Let
        name: lte
        ty:
          kind: Bool
        expr:
          kind: Binary
          op: LesserEq
          lhs:
            kind: Var
            name: a
          rhs:
            kind: Var
            name: b
      - kind: Let
        name: gt
        ty:
          kind: Bool
        expr:
          kind: Binary
          op: Greater
          lhs:
            kind: Var
            name: a
          rhs:
            kind: Var
            name: b
      - kind: Let
        name: gte
        ty:
          kind: Bool
        expr:
          kind: Binary
          op: GreaterEq
          lhs:
            kind: Var
            name: a
          rhs:
            kind: Var
            name: b
      - kind: Let
        name: x
        ty:
          kind: Bool
        expr:
          kind: Bool
          value: true
      - kind: Let
        name: y
        ty:
          kind: Bool
        expr:
          kind: Bool
          value: false
      - kind: Let
        name: bool_eq
        ty:
          kind: Bool
        expr:
          kind: Binary
          op: Eq
          lhs:
            kind: Var
            name: x
          rhs:
            kind: Var
            name: y
      - kind: Let
        name: bool_neq
        ty:
          kind: Bool
        expr:
          kind: Binary
          op: NotEq
          lhs:
            kind: Var
            name: x
          rhs:
            kind: Var
            name: y
