tests/snapshots/type_resolver__type_resolver@16_valid_comparisons.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/16_valid_comparisons.lang
---
Ok: ~
