tests/snapshots/type_resolver__type_resolver@17_valid_unary_ops.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/17_valid_unary_ops.lang
---
Ok: ~
