tests/snapshots/type_resolver__type_resolver@18_valid_if_statements.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/18_valid_if_statements.lang
---
Ok: ~
